--- a/singolo1.html
+++ b/singolo1.html
@@ -11,7 +11,7 @@
   <header class="page-header">
     <h1 class="headerhidden">Singolo</h1>
     <section class="wrapper">
-      <img src="assets/logo-site.png" alt="logo-singolo">
+      <a href="index.html"><img src="assets/logo-site.png" alt="logo-singolo"></a>
       <!-- <div class="logo"></div> -->
       <nav class="main-menu">
         <a class="main-menu-item item active" href="#">home</a>
