feat: add slider with interactive

--- a/singolo1.html
+++ b/singolo1.html
@@ -22,5 +22,23 @@
       </nav>
     </section>
   </header>
+  <section class="slider">
+    <article class="cards-container">
+      <div class="control left">
+        <div class="arrow left icon-arrow-left"></div>
+      </div>
+      <div class="control right">
+        <div class="arrow right icon-arrow-right"></div>
+      </div>
+      <div class="card active">
+        <div class="mobile vertical-mobile">
+          <img class="screen" src="/assets/vertical.jpg" alt="">
+        </div>
+        <div class="mobile horizon-mobile">
+          <img class="screen" src="/assets/horizontal.jpg" alt="">
+        </div>
+      </div>
+    </article>
+  </section>
 </body>
 </html>
