--- a/singolo1.html
+++ b/singolo1.html
@@ -40,5 +40,96 @@
       </div>
     </article>
   </section>
+  <section class="our_services">
+    <article class="wrapper-1">
+      <h2 class="h2">Our Services</h2>
+      <p class="preambul">
+      Fusce dapibus, 
+      tellus ac cursus commodo, 
+      tortor mauris condimentum. 
+      Duis mollis, non commodo luctus,
+      nisi erat porttitor ligula,
+      eget lacinia odio sem nec elit.
+      Fusce dapibus, tellus ac cursus commodo, 
+      tortor mauris condimentum nibh.
+      </p>
+      <section class="info-badges">
+
+        <article class="badge">
+          <span class="the-icons icon-pen"></span>
+          <div>
+            <h3 class="h3">Custom Design</h3>
+            <p class="short-info">
+            Curabitur vestibulum eget mauris quis laoreet. 
+            Phasellus in quam laoreet, 
+            viverra lacus ut, ultrices velit.
+            </p>
+          </div>
+        </article>
+
+        <article class="badge">
+          <span class="the-icons icon-phone"></span>
+          <div>
+            <h3 class="h3">Responsive Layout</h3>
+          <p class="short-info">
+            Sed porttitor placerat rhoncus. 
+            In at nunc tellus. 
+            Maecenas blandit nunc ligula. 
+            Praesent elit leo.
+          </p>
+          </div>
+        </article>
+
+        <article class="badge">
+          <span class="the-icons icon-bulb"></span>
+          <div>
+          <h3 class="h3">Inovative Ideas</h3>
+          <p class="short-info">
+            Quisque luctus, quam eget molestie commodo, 
+            lacus purus cursus purus, 
+            nec rutrum tellus dolor id lorem.
+          </p>  
+          </div>
+        </article>
+
+        <article class="badge">
+          <span class="the-icons icon-bubble"></span>
+          <div>
+          <h3 class="h3">24 / 7 Support</h3>
+          <p class="short-info">
+            Vivamus vel quam lacinia, tincidunt dui non, 
+            vehicula nisi. Nulla a sem erat. 
+            Pellentesque egestas venenatis lorem .
+          </p>  
+          </div>
+        </article>
+
+        <article class="badge">
+          <span class="the-icons icon-heart"></span>
+          <div>
+          <h3 class="h3">Love Is The Answer</h3>
+          <p class="short-info">
+            Nulla sed nunc et tortor luctus faucibus. 
+            Morbi at aliquet turpis, et consequat felis. 
+            Quisque condimentum.
+          </p>  
+          </div>
+        </article>
+
+        <article class="badge">
+          <span class="the-icons icon-star"></span>
+          <div>
+          <h3 class="h3">Feel Like A Star</h3>
+          <p class="short-info">
+            Quisque hendrerit purus dapibus,
+            ornare nibh vitae, viverra nibh. 
+            Fusce vitae aliquam tellus.
+          </p>  
+          </div>
+        </article>
+
+      </section>
+    </div>
+  </section>
 </body>
 </html>
