feat: add portfolio

--- a/singolo2.html
+++ b/singolo2.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Singolo2</title>
-    <link rel="stylesheet" href="singolo2.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Singolo2</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" href="singolo2.css">
 </head>
+
 <body>
-    
+  <section class="portfolio">
+    <section class="wrapper">
+      <h2 class="h2">Portfolio</h2>
+      <p class="preambul">
+        Duis mollis, est non commodo luctus,
+        nisi erat porttitor ligula,
+        eget lacinia odio sem nec elit.
+      </p>
+      <nav class="portfolio-menu">
+        <a href="#" class="nav-btn menu-items active">All</a>
+        <a href="#" class="nav-btn menu-items">Web Design</a>
+        <a href="#" class="nav-btn menu-items">Graphic Design</a>
+        <a href="#" class="nav-btn menu-items">Artwork</a>
+      </nav>
+      <article class="galery">
+        <img src="/assets/portfolio/project_1x1.jpg" alt="sailboat" class="galery-item">
+        <img src="/assets/portfolio/project_1x2.jpg" alt="icecream" class="galery-item">
+        <img src="/assets/portfolio/project_1x3.jpg" alt="moocity" class="galery-item">
+        <img src="/assets/portfolio/project_1x4.jpg" alt="robot heart " class="galery-item">
+        <img src="/assets/portfolio/project_2x1.jpg" alt="paty" class="galery-item">
+        <img src="/assets/portfolio/project_2x2.jpg" alt="corporate" class="galery-item">
+        <img src="/assets/portfolio/project_2x3.jpg" alt="psycho" class="galery-item">
+        <img src="/assets/portfolio/project_2x4.jpg" alt="chickens" class="galery-item">
+        <img src="/assets/portfolio/project_3x1.jpg" alt="monster greeny green" class="galery-item">
+        <img src="/assets/portfolio/project_3x2.jpg" alt="lettering" class="galery-item">
+        <img src="/assets/portfolio/project_3x3.jpg" alt="blood monster" class="galery-item">
+        <img src="/assets/portfolio/project_3x4.jpg" alt="panel" class="galery-item">
+      </article>
+    </section>
+
+  </section>
 </body>
+
 </html>
