--- a/singolo2.html
+++ b/singolo2.html
@@ -39,7 +39,65 @@
         <img src="/assets/portfolio/project_3x4.jpg" alt="panel" class="galery-item">
       </article>
     </section>
-
+  </section> <!--end portfolio-->
+  <section class="about-us">
+    <section class="wrapper">
+      <h2 class="h2">About Us</h2>
+      <p class="preambul">
+        Fusce dapibus, tellus ac cursus commodo, 
+        tortor mauris condimentum. Duis mollis, 
+        non commodo luctus, nisi erat porttitor ligula, 
+        eget lacinia odio sem nec elit. Fusce dapibus, 
+        tellus ac cursus commodo, 
+        tortor mauris condimentum nibh.
+      </p>
+      <article class="staff">
+        <div class="employee">
+          <img class="employee-photo" src="assets/about_us/adam_jensen.jpg" alt="Adam Jensen">
+          <h3 class="h3">Adam Jensen</h3>
+          <p class="info">
+            Quisque luctus, 
+            quam eget molestie commodo, lacus purus cursus purus, 
+            nec rutrum tellus dolor id lorem.</p>
+          <div class="social">
+            <a href="" class="social-icon icon-facebook"></a>
+            <a href="" class="social-icon icon-gplus"></a>
+            <a href="" class="social-icon icon-twitter"></a>
+            <a href="" class="social-icon icon-linkedin"></a>
+          </div>
+        </div>
+        <div class="employee">
+          <img class="employee-photo" src="assets/about_us/desmond_miles.jpg" alt="Desmond Miles">
+          <h3 class="h3">Desmond Miles</h3>
+          <p class="info">
+            Curabitur vestibulum eget mauris quis laoreet. 
+            Phasellus in quam laoreet, 
+            viverra lacus ut, ultrices velit.
+          </p>
+          <div class="social">
+            <a href="" class="social-icon icon-facebook"></a>
+            <a href="" class="social-icon icon-gplus"></a>
+            <a href="" class="social-icon icon-twitter"></a>
+            <a href="" class="social-icon icon-linkedin"></a>
+          </div>
+        </div>
+        <div class="employee">
+          <img class="employee-photo" src="assets/about_us/scolara_visari.jpg" alt="Scolara Visari">
+          <h3 class="h3">Scolara Visari</h3>
+          <p class="info">
+            Nulla sed nunc et tortor luctus faucibus. 
+            Morbi at aliquet turpis, et consequat felis. 
+            Quisque condimentum.
+          </p>
+          <div class="social">
+            <a href="#" class="social-icon icon-facebook"></a>
+            <a href="#" class="social-icon icon-gplus"></a>
+            <a href="#" class="social-icon icon-twitter"></a>
+            <a href="#" class="social-icon icon-linkedin"></a>
+          </div>
+        </div>
+      </article>
+    </section>
   </section>
 </body>
 
