--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 </head>
 
 <body>
-  <header class="page-header">
+  <header class="page-header" id="home">
     <h1 class="headerhidden">Singolo</h1>
     <section class="wrapper">
       <a class="logo" href="index.html"><img src="assets/logo-site.png" alt="logo-singolo"></a>
       <nav class="main-menu">
-        <a class="main-menu-item item active" href="#">home</a>
-        <a class="main-menu-item item" href="#">services</a>
-        <a class="main-menu-item item" href="#">portfolio</a>
-        <a class="main-menu-item item" href="#">about</a>
-        <a class="main-menu-item item" href="#">contact</a>
+        <a class="main-menu-item item active" href="#home">home</a>
+        <a class="main-menu-item item" href="#services">services</a>
+        <a class="main-menu-item item" href="#portfolio">portfolio</a>
+        <a class="main-menu-item item" href="#about">about</a>
+        <a class="main-menu-item item" href="#contact">contact</a>
       </nav>
     </section>
   </header>
@@ -43,7 +43,7 @@
     </article>
   </section>
   
-  <section class="our_services">
+  <section id="services" class="our_services">
     <article class="wrapper">
       <h2 class="h2">Our Services</h2>
       <p class="preambul">
@@ -135,7 +135,7 @@
       </div>
   </section>
 
-  <section class="portfolio">
+  <section id="portfolio" class="portfolio">
     <section class="wrapper">
       <h2 class="h2">Portfolio</h2>
       <p class="preambul">
@@ -150,18 +150,18 @@
         <a href="#" class="nav-btn menu-items">Artwork</a>
       </nav>
       <article class="galery">
-        <img src="/assets/portfolio/project_1x1.jpg" alt="sailboat" class="galery-item">
-        <img src="/assets/portfolio/project_1x2.jpg" alt="icecream" class="galery-item">
-        <img src="/assets/portfolio/project_1x3.jpg" alt="moocity" class="galery-item">
-        <img src="/assets/portfolio/project_1x4.jpg" alt="robot heart " class="galery-item">
-        <img src="/assets/portfolio/project_2x1.jpg" alt="paty" class="galery-item">
-        <img src="/assets/portfolio/project_2x2.jpg" alt="corporate" class="galery-item">
-        <img src="/assets/portfolio/project_2x3.jpg" alt="psycho" class="galery-item">
-        <img src="/assets/portfolio/project_2x4.jpg" alt="chickens" class="galery-item">
-        <img src="/assets/portfolio/project_3x1.jpg" alt="monster greeny green" class="galery-item">
-        <img src="/assets/portfolio/project_3x2.jpg" alt="lettering" class="galery-item">
-        <img src="/assets/portfolio/project_3x3.jpg" alt="blood monster" class="galery-item">
-        <img src="/assets/portfolio/project_3x4.jpg" alt="panel" class="galery-item">
+        <img src="assets/portfolio/project_1x1.jpg" alt="sailboat" class="galery-item">
+        <img src="assets/portfolio/project_1x2.jpg" alt="icecream" class="galery-item">
+        <img src="assets/portfolio/project_1x3.jpg" alt="moocity" class="galery-item">
+        <img src="assets/portfolio/project_1x4.jpg" alt="robot heart " class="galery-item">
+        <img src="assets/portfolio/project_2x1.jpg" alt="paty" class="galery-item">
+        <img src="assets/portfolio/project_2x2.jpg" alt="corporate" class="galery-item">
+        <img src="assets/portfolio/project_2x3.jpg" alt="psycho" class="galery-item">
+        <img src="assets/portfolio/project_2x4.jpg" alt="chickens" class="galery-item">
+        <img src="assets/portfolio/project_3x1.jpg" alt="monster greeny green" class="galery-item">
+        <img src="assets/portfolio/project_3x2.jpg" alt="lettering" class="galery-item">
+        <img src="assets/portfolio/project_3x3.jpg" alt="blood monster" class="galery-item">
+        <img src="assets/portfolio/project_3x4.jpg" alt="panel" class="galery-item">
       </article>
     </section>
   </section>
@@ -253,8 +253,8 @@
         <ul class="links">
           <li><a class="item location" href="http://"><span class="contact-icon icon-location"></span> Elm St. 14/05
               Lost City</a> </li>
-          <li><a class="item phone" href="tel:+"><span class="contact-icon icon-phone"></span>03528 331 86 35</a></li>
-          <li><a class="item mail" href="mailto:"><span class="contact-icon icon-mail"></span>info@singolo.com</a></li>
+          <li><a class="item phone" href="tel:+03528 331 86 35"><span class="contact-icon icon-phone"></span>03528 331 86 35</a></li>
+          <li><a class="item mail" href="mailto:info@singolo.com"><span class="contact-icon icon-mail"></span>info@singolo.com</a></li>
         </ul>
       </div>
     </section>
