fix: adress img mobile; fix: name img portfolio

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
       </div>
       <div class="card active">
         <div class="mobile vertical-mobile">
-          <img class="screen" src="/assets/vertical.jpg" alt="">
+          <img class="screen" src="assets/vertical.jpg" alt="">
         </div>
         <div class="mobile horizon-mobile">
-          <img class="screen" src="/assets/horizontal.jpg" alt="">
+          <img class="screen" src="assets/horizontal.jpg" alt="">
         </div>
       </div>
     </article>
@@ -159,7 +159,7 @@
         <img src="assets/portfolio/project_2x3.jpg" alt="psycho" class="galery-item">
         <img src="assets/portfolio/project_2x4.jpg" alt="chickens" class="galery-item">
         <img src="assets/portfolio/project_3x1.jpg" alt="monster greeny green" class="galery-item">
-        <img src="assets/portfolio/project_3x2.jpg" alt="lettering" class="galery-item">
+        <img src="assets/portfolio/Project_3x2.jpg" alt="lettering" class="galery-item">
         <img src="assets/portfolio/project_3x3.jpg" alt="blood monster" class="galery-item">
         <img src="assets/portfolio/project_3x4.jpg" alt="panel" class="galery-item">
       </article>
