--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
     </section>
     <section class="feedback wrapper">
       <form name="feedback" class="form" action="GET">
-        <input class="input txt" type="text" name="" id="" placeholder="Name (Required)">
-        <input class="input txt" type="email" name="" id="" placeholder="Email (Required)">
+        <input class="input txt" type="text" name="" id="" placeholder="Name (Required)" required>
+        <input class="input txt" type="email" name="" id="" placeholder="Email (Required)" required>
         <input class="input txt" type="text" name="" id="" placeholder="Subject">
         <textarea class="input textarea" name="" id="" cols="30" wrap="off"
           placeholder="Describe your project in detail..."></textarea>
