feat: implement menu switch, add anchor

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <h1 class="headerhidden">Singolo</h1>
     <section class="wrapper">
       <a class="logo" href="index.html"><img src="assets/logo-site.png" alt="logo-singolo"></a>
-      <nav class="main-menu">
+      <nav id="header-main-menu" class="main-menu">
         <a class="main-menu-item item active" href="#home">home</a>
         <a class="main-menu-item item" href="#services">services</a>
         <a class="main-menu-item item" href="#portfolio">portfolio</a>
-        <a class="main-menu-item item" href="#about">about</a>
+        <a class="main-menu-item item" href="#aboutUs">about</a>
         <a class="main-menu-item item" href="#contact">contact</a>
       </nav>
     </section>
@@ -166,7 +166,7 @@
     </section>
   </section>
 
-  <section class="about-us">
+  <section id="aboutUs" class="about-us">
     <section class="wrapper">
       <h2 class="h2">About Us</h2>
       <p class="preambul">
@@ -243,7 +243,7 @@
 
         <input class="input submit" type="submit" value="Send">
       </form>
-      <div class="contact">
+      <div id="contact" class="contact">
         <h3 class="h3">Contact Information</h3>
         <p class="info">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.
           Proin
