--- a/index.html
+++ b/index.html
@@ -149,19 +149,19 @@
         <a href="#" class="nav-btn menu-items">Graphic Design</a>
         <a href="#" class="nav-btn menu-items">Artwork</a>
       </nav>
-      <article class="galery">
-        <img src="assets/portfolio/project_1x1.jpg" alt="sailboat" class="galery-item">
-        <img src="assets/portfolio/project_1x2.jpg" alt="icecream" class="galery-item">
-        <img src="assets/portfolio/project_1x3.jpg" alt="moocity" class="galery-item">
-        <img src="assets/portfolio/project_1x4.jpg" alt="robot heart " class="galery-item">
-        <img src="assets/portfolio/project_2x1.jpg" alt="paty" class="galery-item">
-        <img src="assets/portfolio/project_2x2.jpg" alt="corporate" class="galery-item">
-        <img src="assets/portfolio/project_2x3.jpg" alt="psycho" class="galery-item">
-        <img src="assets/portfolio/project_2x4.jpg" alt="chickens" class="galery-item">
-        <img src="assets/portfolio/project_3x1.jpg" alt="monster greeny green" class="galery-item">
-        <img src="assets/portfolio/Project_3x2.jpg" alt="lettering" class="galery-item">
-        <img src="assets/portfolio/project_3x3.jpg" alt="blood monster" class="galery-item">
-        <img src="assets/portfolio/project_3x4.jpg" alt="panel" class="galery-item">
+      <article id="portfolio-galery" class="galery">
+        <img class="galery-item" src="assets/portfolio/project_1x1.jpg" alt="sailboat" >
+        <img class="galery-item" src="assets/portfolio/project_1x2.jpg" alt="icecream" >
+        <img class="galery-item" src="assets/portfolio/project_1x3.jpg" alt="moocity" >
+        <img class="galery-item" src="assets/portfolio/project_1x4.jpg" alt="robot heart " >
+        <img class="galery-item" src="assets/portfolio/project_2x1.jpg" alt="paty" >
+        <img class="galery-item" src="assets/portfolio/project_2x2.jpg" alt="corporate" >
+        <img class="galery-item" src="assets/portfolio/project_2x3.jpg" alt="psycho" >
+        <img class="galery-item" src="assets/portfolio/project_2x4.jpg" alt="chickens" >
+        <img class="galery-item" src="assets/portfolio/project_3x1.jpg" alt="monster greeny green" >
+        <img class="galery-item" src="assets/portfolio/Project_3x2.jpg" alt="lettering" >
+        <img class="galery-item" src="assets/portfolio/project_3x3.jpg" alt="blood monster" >
+        <img class="galery-item" src="assets/portfolio/project_3x4.jpg" alt="panel" >
       </article>
     </section>
   </section>
