feat: implement portfolio switch tab

--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
         nisi erat porttitor ligula,
         eget lacinia odio sem nec elit.
       </p>
-      <nav class="portfolio-menu">
-        <a href="#" class="nav-btn menu-items active">All</a>
-        <a href="#" class="nav-btn menu-items">Web Design</a>
-        <a href="#" class="nav-btn menu-items">Graphic Design</a>
-        <a href="#" class="nav-btn menu-items">Artwork</a>
+      <nav id="portfolio-menu" class="portfolio-menu">
+        <a href="#portfolio" class="nav-btn menu-item active">All</a>
+        <a href="#portfolio" class="nav-btn menu-item">Web Design</a>
+        <a href="#portfolio" class="nav-btn menu-item">Graphic Design</a>
+        <a href="#portfolio" class="nav-btn menu-item">Artwork</a>
       </nav>
       <article id="portfolio-galery" class="galery">
         <img class="galery-item" src="assets/portfolio/project_1x1.jpg" alt="sailboat" >
