fix: form submit &  required validate

--- a/index.html
+++ b/index.html
@@ -298,10 +298,10 @@
   <div id="message-block" class="hidden">
     <div id="message" class="message">
       <h2 class="title">Письмо отправлено</h2>
-      <p id="name-value" >Name: <span class="result"></span></p>
-      <p id="email-value" >Email: <span class="result"></span></p>
-      <p id="subject-value" >Subject: <span class="result"></span></p>
-      <p id="description-value" >Description: <span class="result"></span></p>
+      <p id="name-value" ></p>
+      <p id="email-value" ></p>
+      <p id="subject-value" ></p>
+      <p id="description-value" ></p>
       <button id="close-popup-btn" class="btn-close">OK</button>
     </div>
   </div>
