feat: add behavor header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="wrapper">
       <a class="logo" href="index.html"><img src="assets/logo-site.png" alt="logo-singolo"></a>
       <nav id="header-main-menu" class="main-menu">
-        <a class="main-menu-item item active" href="#home">home</a>
+        <a class="main-menu-item item active" href="#">home</a>
         <a class="main-menu-item item" href="#services">services</a>
         <a class="main-menu-item item" href="#portfolio">portfolio</a>
         <a class="main-menu-item item" href="#aboutUs">about</a>
@@ -27,7 +27,7 @@
 
 
 
-  <section id="slider" class="slider">
+  <section id="slider" class="slider content">
 
     <article id="cards-container" class="cards-container">
 
@@ -75,7 +75,7 @@
 
 
 
-  <section id="services" class="our_services">
+  <section id="services" class="our_services content">
     <article class="wrapper">
       <h2 class="h2">Our Services</h2>
       <p class="preambul">
@@ -167,7 +167,7 @@
       </div>
   </section>
 
-  <section id="portfolio" class="portfolio">
+  <section id="portfolio" class="portfolio content">
     <section class="wrapper">
       <h2 class="h2">Portfolio</h2>
       <p class="preambul">
@@ -198,7 +198,7 @@
     </section>
   </section>
 
-  <section id="aboutUs" class="about-us">
+  <section id="aboutUs" class="about-us content">
     <section class="wrapper">
       <h2 class="h2">About Us</h2>
       <p class="preambul">
@@ -258,7 +258,7 @@
     </section>
   </section>
 
-  <section class="get_a_quote">
+  <section class="get_a_quote content">
     <section class="wrapper">
       <h2 class="h2">Get a Quote</h2>
       <p class="preambul">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non
